# value-at-risk

./: .gitignore  Dockerfile  README.md  app.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hf.yml
notebooks/: historical.ipynb  monte-carlo-simulation.ipynb  parametric.ipynb
reports/sample/: AMZN_2026-04-01_Historical_VaR.xlsx  AMZN_2026-04-01_Parametric_VaR.xlsx  BCS_2026-04-01_Historical_VaR.xlsx  BCS_2026-04-01_Parametric_VaR.xlsx
src/: __init__.py  config.py  excel_export.py  historical.py  logger.py  parametric.py  utils.py
